<resources>
    <string name="app_name">Registrar Liza Alert</string>
    <string name="add_volunteer_manually">Add volunteer\nmanually</string>
    <string name="add_volunteer_by_qrcode_scanner">Add volunteer\nby QRCode scanner</string>
    <string name="fullName">Full Name:</string>
    <string name="surname">Surname:</string>
    <string name="call_sign">Call sign:</string>
    <string name="phone_number">Phone number:</string>
    <string name="enter_your_data_below">Enter data below.</string>
    <string name="save_data">Save data</string>
    <string name="chooser_title">How you want to sent message?</string>
    <string name="scan_again">Scan again</string>
    <string name="tab_text_1">New</string>
    <string name="tab_text_2">Sent</string>
    <string name="tab_text_3">All</string>
    <string name="fab_sent_manually_label">Add\nmanually</string>
    <string name="fab_add_scanner_label">Add by\nQRScanner</string>
    <string name="fab_sent_new_label">Sent\nnew</string>
    <string name="permission_granded">Permission granded</string>
    <string name="permission_denied">Permission Denied\n</string>
    <string name="denied_message">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="warning">Warning</string>
    <string name="message_confirm_delete_one">Confirm delete selected data</string>
    <string name="delete_all">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="attention">Attention</string>
    <string name="message_confirm_sent_to_inforg">Confirm sent data to inforg</string>
    <string name="sent_successfully">Sent successfully</string>
    <string name="not_sent">Not sent</string>
    <string name="message_confirm_delete_all">Confirm delete all data</string>
    <string name="have_a_car">Have a car</string>
    <string name="mark_of_a_car">Mark of a car:</string>
    <string name="model_of_a_car">Model of a car:</string>
    <string name="registration_number_of_a_car">Registration number:</string>
    <string name="color_of_a_car">Color of a car:</string>
    <string name="elder_template" translatable="false">%s (%s)</string>
    <string name="success_qr_code_scan_message">Scan was successful</string>
    <string name="warning_qr_code_scan_volunteer_exist_message">This volunteer is already exist!</string>
    <string name="error_qr_code_scan_message">There was an error while scanning, try again</string>
    <string name="actionbar_label_volunteers">Volunteers</string>
    <string name="actionbar_label_foxes">Foxes</string>
    <string name="actionbar_label_scan_QR">Scan QR</string>
    <string name="actionbar_label_add_manually">Add manually</string>
    <string name="search_searching">Search</string>
    <string name="foxes_item_number_of_fox">Fox %s</string>
    <string name="fill_in_fields_volunteer">Fill in the fields - Full Name and Phone Number!</string>
    <string name="select_elder_and_searchers_from_list">You must select a elder of group and searchers from the list</string>
    <string name="elder_of_group">Elder of Group</string>
    <string name="select_elder_of_group">Select elder of Group</string>
    <string name="searchers">Searchers</string>
    <string name="save_the_group">Save the Group</string>
    <string name="select_a_searcher">Select a searcher</string>
    <string name="elder">Elder:</string>
    <string name="elder_phone_number">Phone number:</string>
    <string name="label_group_detail">In detail</string>
    <string name="label_group_detail_task">Task:</string>
    <string name="enter_group_task_hint">Enter Group task</string>
    <string name="label_group_detail_equipment">Equipment:</string>
    <string name="enter_navigators_hint">Enter the Group navigators</string>
    <string name="label_detail_group_navigators">Navigators:</string>
    <string name="volunteer_status_active">Active</string>
    <string name="volunteer_status_left">Left</string>
    <string name="three_dots_menu" translatable="false">⋮</string>
    <string name="change_status">Change status</string>
    <string name="change_search_time">Change search time</string>
    <string name="edit_data">Edit data</string>
    <string name="data_saved">Data saved</string>
    <string name="fab_sent_who_left_label">Send those\nwho left\nto inforg</string>
    <string name="forum_nickname">Forum Nickname:</string>
    <string name="region">Region:</string>
    <string name="info_about_car">Car (reg number):</string>
    <string name="template_for_legacy_fullname" translatable="false">%s %s</string>
    <string name="template_for_legacy_car" translatable="false">%s (%s)</string>
    <string name="send_data_groups">Send Group data</string>
    <string name="create_new_group">Create \nnew Group</string>
    <string name="label_detail_group_walkie_talkies">Walkie-talkies:</string>
    <string name="enter_walkie_talkie_hint">Enter the Group walkie-talkies</string>
    <string name="label_detail_group_compasses">Compasses:</string>
    <string name="enter_compasses_hint">Enter the Group compasses</string>
    <string name="label_detail_group_lamps">Lamps:</string>
    <string name="enter_lamps_hint">Enter the Group lamps</string>
    <string name="label_detail_group_other">Other:</string>
    <string name="enter_others_hint">Enter other equipment</string>
    <string name="backup_db">Backup and send</string>
    <string name="load_db">Load Database</string>
    <string name="message_for_success_backup_db">The database was saved successfully</string>
    <string name="message_for_success_restore_db">Database restoration was successful</string>
    <string name="message_for_error_backup_adn_restore_db">An error has occurred</string>
    <string name="group_tab_text_1">Active</string>
    <string name="group_tab_text_2">Archive</string>
    <string name="group_callsign_lisa">Fox</string>
    <string name="group_callsign_bort">Board</string>
    <string name="group_callsign_kinolog">Dog handler</string>
    <string name="group_callsign_veter">Wind</string>
    <string name="group_callsign_voda">Water</string>
    <string name="group_callsign_pegas">Pegasus</string>
    <string name="group_callsign_police">Police</string>
    <string name="group_callsign_mchs">MES</string>
    <string name="group_callsign_pso">SRS</string>
    <string name="label_groups">Groups</string>
    <string name="label_group">Group:</string>
    <string name="label_database">Database</string>
    <string name="nav_open_drawer">Open</string>
    <string name="nav_close_drawer">Close</string>
    <string name="group_options_menu_send_to_archive">Send to archive</string>
    <string name="archived">IN THE ARCHIVE</string>
    <string name="message_confirm_add_to_archive">Confirm the transfer of the group to the archive</string>
    <string name="group_detail_menu_edit">Edit</string>
</resources>
