<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="4dp"
    tools:context=".ui.activities.GroupDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.activities.GroupDetailActivity">

        <TextView
            android:id="@+id/tvNumberOfGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Лиса 5" />

        <TextView
            android:id="@+id/tvDateOfCreation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="30 мая 2005" />

        <TextView
            android:id="@+id/tvElderOfGroupLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/elder"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNumberOfGroup" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGroupDetailInfoElder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvElderOfGroupLabel"/>

        <TextView
            android:id="@+id/tvSearchersLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/searchers"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rvGroupDetailInfoElder" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGroupDetailInfoVolunteers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSearchersLabel" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_group_detail_task"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvGroupDetailInfoVolunteers">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTask"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvEquipmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/label_group_detail_equipment"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutTask" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutNavigators"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_detail_group_navigators"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEquipmentLabel">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNavigators"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutWalkieTalkies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_detail_group_walkie_talkies"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutNavigators">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWalkieTalkies"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutCompasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_detail_group_compasses"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutWalkieTalkies">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCompasses"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutLamps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_detail_group_lamps"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutCompasses">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLamps"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutOthers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label_detail_group_other"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutLamps">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etOthers"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/bDetailGroupSaveData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="onClickSaveGroupData"
            android:text="@string/save_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutOthers" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>