<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activities.AddNewGroupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <include
            android:id="@+id/new_group_toolbar"
            layout="@layout/toolbar_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tvAddGroupElderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/elder_of_group"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <AutoCompleteTextView
                android:id="@+id/actv_add_group_elder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/select_elder_of_group"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvAddGroupElderTitle" />

            <TextView
                android:id="@+id/tv_add_group_members_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/searchers"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actv_add_group_elder" />

            <ImageView
                android:id="@+id/add_new_member_of_new_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintStart_toEndOf="@id/tv_add_group_members_title"
                app:layout_constraintTop_toBottomOf="@+id/actv_add_group_elder"
                app:srcCompat="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/b_add_group_save_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/save_the_group"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_add_group" />

            <AutoCompleteTextView
                android:id="@+id/actv_add_group_searcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:completionThreshold="0"
                android:hint="@string/select_a_searcher"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_add_group_members_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_add_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actv_add_group_searcher" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>




</androidx.core.widget.NestedScrollView>