<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.main.NotSentVolunteersFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewNotSentVolunteersTab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fam_menu_tab"
        android:layout_margin="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fab:layout_constraintBottom_toBottomOf="parent"
        fab:layout_constraintEnd_toEndOf="parent"
        fab:menu_colorNormal="@color/colorPrimary">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_buttonAddManuallyTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_edit"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_label="@string/fab_sent_manually_label" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_buttonAddByScannerTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_camera"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_label="@string/fab_add_scanner_label" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_buttonSentNewTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_send"
            fab:fab_colorNormal="@color/colorPrimary"
            fab:fab_label="@string/fab_sent_new_label" />

    </com.github.clans.fab.FloatingActionMenu>

</androidx.constraintlayout.widget.ConstraintLayout>